# codecortex

./: .editorconfig  .env.cortex  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVPLAN.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  default.nix  docker-compose.yml  flake.nix  install.sh  llms.txt  mcp.json  quickstart.sh  report.json  result  test_config.rs  test_tfidf  test_tfidf.rs
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
crates/cortex-a2a/: Cargo.toml  build.rs
crates/cortex-a2a/src/: a2a_errors.rs  agent_card.rs  bus.rs  codec.rs  cooperation.rs  envelope.rs  hub.rs  lib.rs  manifest.rs  payload.rs  proto.rs  push.rs  roles.rs  services.rs  session.rs  spec_codec.rs  task_events.rs  wire.rs
crates/cortex-a2a/src/proto/: google.rs  wkt.rs
crates/cortex-a2a/src/runtime/: context.rs  external.rs  gateway.rs  mod.rs  runners.rs  supervisor.rs  workflow.rs
crates/cortex-a2a/src/task_store/: mod.rs  sled_store.rs
crates/cortex-a2a/tests/: a2a_http_conformance.rs  a2a_sse_subscribe.rs  bus_supervisor.rs  codec_contract.rs  manifest_registry.rs  proto_contract.rs  push_delivery.rs  spawn_tool_hints.rs  workflow_parallel.rs
crates/cortex-benches/: Cargo.toml  README.md  perf_budget.json
crates/cortex-benches/benches/: cache_benchmark.rs  capsule_benchmark.rs  graph_bulk_benchmark.rs  hybrid_search_benchmark.rs  impact_benchmark.rs  parse_batch_benchmark.rs  performance_scenarios.rs  pipeline_stage_benchmark.rs  tfidf_benchmark.rs  vector_smoke_benchmark.rs  watcher_perf_benchmark.rs
crates/cortex-cli/: Cargo.toml  README.md
crates/cortex-cli/src/: cli_indexing.rs  main.rs  setup_wizard.rs
crates/cortex-cli/src/commands/: doctor.rs  mod.rs
crates/cortex-cli/tests/: a2a_consensus_deadlock.rs  a2a_deadlock_fixture.rs  a2a_external_roundtrip.rs  a2a_host_call_budget.rs  a2a_network_e2e.rs  a2a_workflows_e2e.rs  language_matrix_integration.rs  mcp_live_tool_audit.rs  mcp_network_integration.rs
crates/cortex-cli/tests/fixtures/deadlock_transport/: Cargo.toml
crates/cortex-cli/tests/integration/: flow.rs  harness.rs  projects.rs
crates/cortex-core/: Cargo.toml  README.md
crates/cortex-core/src/: a2a_config.rs  complexity.rs  config.rs  error.rs  git.rs  ignore.rs  index_scope.rs  language.rs  lib.rs  mcp_config.rs  model.rs  project.rs  tokens.rs
crates/cortex-core/tests/: cortexignore_hierarchical.rs  gitignore_oracle.rs  graph_index_scope.rs
crates/cortex-graph/: Cargo.toml  README.md
crates/cortex-graph/src/: backend.rs  blackboard.rs  bundle.rs  client.rs  cross_project.rs  edge_profile.rs  falkordb.rs  falkordb_params.rs  falkordb_profile.rs  lib.rs  memgraph.rs  migration.rs  pool.rs  query_engine.rs  schema.rs  scoped_query.rs  timeout.rs  writer.rs
crates/cortex-graph/tests/: a2a_blackboard_load.rs  a2a_blackboard_payloads.rs  falkordb_bulk_throughput_test.rs  falkordb_bulk_upsert_smoke.rs  falkordb_index_explain_test.rs  integration_test.rs  live_test.rs  selfindex_test.rs
crates/cortex-indexer/: Cargo.toml  README.md
crates/cortex-indexer/src/: build_detector.rs  clones.rs  edge_spill.rs  incremental.rs  indexer.rs  lib.rs  parallel.rs  reach.rs  report_analysis.rs  skeleton.rs
crates/cortex-mcp/: Cargo.toml  README.md  build.rs  mcp.json
crates/cortex-mcp/src/: a2a_facade.rs  a2a_grpc.rs  a2a_host.rs  a2a_http.rs  a2a_services.rs  agent_pack.rs  agent_tool_guide.md  audit.rs  cache.rs  capsule.rs  centrality.rs  contracts.rs  flags.rs  handler.rs  handler.rs.bak  handler_guides.rs  host_guard.rs  impact.rs  jobs.rs  lazy_tools.rs  lib.rs  logic_flow.rs  lsp_ingest.rs  mcp_profile.rs  mcp_protocol.rs  memory.rs  metrics.rs  network_server.rs  project_tools.rs  quality.rs  rerank.rs  response_buffer.rs  savings.rs  server.rs  telemetry.rs  tfidf.rs  tool_catalog.rs  tools.rs  vector_service.rs
crates/cortex-mcp/src/intelligence/: capsule.rs  filters.rs  freshness.rs  impact.rs  mod.rs  pack.rs  patch.rs  pr_review.rs  tool_router.rs  types.rs
crates/cortex-mcp/tests/: a2a_grpc_contract.rs  a2a_host_guard.rs  a2a_http_conformance.rs  a2a_hub_stdio_graph.rs  a2a_push_webhook.rs  a2a_twag_e2e.rs  a2a_validate_build.rs  a2a_validator_build_failure.rs  a2a_ws_events.rs  agent_pack_install.rs  capsule_token_budget.rs  contract_tests.rs  cortexignore_parity.rs  e2e_tests.rs  intelligence_parity.rs  mcp_a2a_workflow.rs  mcp_semantic_audit.rs  mcp_semantic_description.rs  mcp_vector_semantic.rs  retrieval_recall.rs  tool_surface_matrix.rs  twag_common.rs  twag_corpus_accuracy.rs
crates/cortex-mcp/tests/e2e/: mod.rs
crates/cortex-mcp/tests/fixtures/twag_goldens/: README.md  find_all_usages_peer_state.json  find_all_usages_peer_state.live.json  find_all_usages_should_relay.json  find_all_usages_should_relay.live.json  find_callers_apply_config_snapshot.json  find_callers_orchestrator_snapshot.json  go_to_definition_orchestrator_snapshot.json  go_to_definition_orchestrator_snapshot.live.json  go_to_definition_peer_state.json  go_to_definition_peer_state.live.json  go_to_definition_should_relay.json  go_to_definition_should_relay.live.json  manifest.json
crates/cortex-parser/: Cargo.toml  README.md
crates/cortex-parser/benches/: indexing_throughput.rs
crates/cortex-parser/src/: lib.rs  parse_pool.rs  parser_impl.rs  registry.rs  signature.rs
crates/cortex-parser/src/languages/: c.rs  common.rs  cpp.rs  go.rs  java.rs  javascript.rs  json.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  shell.rs  swift.rs  typescript.rs
crates/cortex-parser/tests/: sample_project_rust.rs
crates/cortex-parser/tests/fixtures/sample_project_rust/: Cargo.toml
crates/cortex-pipeline/: Cargo.toml  README.md
crates/cortex-pipeline/src/: context.rs  lib.rs  pipeline.rs  stage.rs
crates/cortex-vector/: Cargo.toml  README.md
crates/cortex-vector/src/: embedder.rs  hybrid.rs  json_store.rs  lancedb_store.rs  lib.rs  schema.rs  static_embedder.rs
crates/cortex-watcher/: Cargo.toml  README.md
crates/cortex-watcher/src/: daemon.rs  debounce.rs  filter.rs  lib.rs  perf.rs  registry.rs  remote.rs  watcher.rs
(+176 files in other folders)
