[workspace]
members = [
    "crates/cortex-core",
    "crates/cortex-parser",
    "crates/cortex-graph",
    "crates/cortex-indexer",
    "crates/cortex-analyzer",
    "crates/cortex-watcher",
    "crates/cortex-mcp",
    "crates/cortex-cli",
    "crates/cortex-benches",
    "crates/cortex-vector",
    "crates/cortex-pipeline",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Aleksandr Loskarev <mailbox@aloshkarev.com>"]
description = "CodeCortex is a Rust code-graph service and AI productivity toolkit featuring: - **`cortex` CLI** for indexing, search, and analysis - **MCP server mode** for AI clients (Claude, Cursor, VSCode) - **Memgraph backend** (Bolt protocol) with Neo4j support - **Multi-language parsing** via tree-sitter (Rust, Python, Go, TypeScript, JavaScript, C, C++, Java, PHP, Ruby) - **Hybrid search** with vector embeddings - **Enhanced memory system** for AI context persistence"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dialoguer = "0.12"
ignore = "0.4"
indicatif = "0.18.4"
neo4rs = "0.8"
notify = "8"
notify-debouncer-mini = "0.7"
owo-colors = "4"
rayon = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter = "0.26.6"
walkdir = "2"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
rmcp = { version = "1.1.0", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"
tempfile = "3"
testcontainers = "0.27.1"
dotenvy = "0.15"

[profile.dev]
incremental = false

[profile.release]
incremental = false
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
