[workspace]
members = [
    "crates/cortex-core",
    "crates/cortex-indexer",
    "crates/cortex-analyzer",
    "crates/cortex-mcp",
    "crates/cortex-cli",
    "crates/cortex-benches",
    "crates/cortex-pipeline",
    "crates/cortex-a2a",
    # Extracted to ../crates/ (shared cross-project crates):
    # cortex-parser   -> ../crates/code-parser/
    # cortex-graph    -> ../crates/graph-store/
    # cortex-vector   -> ../crates/vector-store/
    # cortex-watcher  -> ../crates/fs-watcher/
]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Aleksandr Loskarev <mailbox@aloshkarev.com>"]
description = "CodeCortex is a Rust code-graph service and AI productivity toolkit featuring: - **`cortex` CLI** for indexing, search, and analysis - **MCP server mode** for AI clients (Claude, Cursor, VSCode) - **FalkorDB graph backend** (Redis RESP / GRAPH.QUERY) - **Multi-language parsing** via tree-sitter (Rust, Python, Go, Kotlin, TypeScript, JavaScript, C, C++, Java, PHP, Ruby, Swift) - **Hybrid search** with vector embeddings - **Enhanced memory system** for AI context persistence"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dialoguer = "0.12"
ignore = "0.4"
indicatif = "0.18.4"
notify = "8"
notify-debouncer-mini = "0.7"
owo-colors = "4"
rayon = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
sled = "0.34"
thiserror = "2"
tiktoken-rs = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter = "0.26.6"
walkdir = "2"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
rmcp = { version = "1.1.0", features = ["server", "transport-io", "transport-streamable-http-server-session", "transport-streamable-http-server", "schemars"] }
schemars = "1.0"
tempfile = "3"
testcontainers = "0.27.1"
dotenvy = "0.15"

[profile.dev]
incremental = false

[profile.release]
incremental = false
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
