[package]
name = "cortex-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
cortex-mcp = { path = "../cortex-mcp" }
cortex-indexer = { path = "../cortex-indexer" }
cortex-core = { path = "../cortex-core" }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "capsule_benchmark"
harness = false

[[bench]]
name = "impact_benchmark"
harness = false

[[bench]]
name = "cache_benchmark"
harness = false

[[bench]]
name = "tfidf_benchmark"
harness = false
