[package]
name = "cortex-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
cortex-mcp = { path = "../cortex-mcp" }
cortex-parser = { path = "../cortex-parser" }
cortex-pipeline = { path = "../cortex-pipeline" }
cortex-watcher = { path = "../cortex-watcher" }
cortex-vector = { path = "../cortex-vector" }
cortex-core = { path = "../cortex-core" }
criterion = { version = "0.8", features = ["html_reports"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tempfile = "3"

[[bench]]
name = "capsule_benchmark"
harness = false

[[bench]]
name = "impact_benchmark"
harness = false

[[bench]]
name = "cache_benchmark"
harness = false

[[bench]]
name = "tfidf_benchmark"
harness = false

[[bench]]
name = "parse_batch_benchmark"
harness = false

[[bench]]
name = "pipeline_stage_benchmark"
harness = false

[[bench]]
name = "watcher_perf_benchmark"
harness = false

[[bench]]
name = "vector_smoke_benchmark"
harness = false

[[bench]]
name = "graph_bulk_benchmark"
harness = false

[[bench]]
name = "hybrid_search_benchmark"
harness = false

[[bench]]
name = "performance_scenarios"
harness = false
