[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ignore.workspace = true
serde.workspace = true
thiserror.workspace = true
toml = "1"
chrono = { version = "0.4", features = ["serde"] }
tiktoken-rs.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
