[package]
name = "cortex-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
cortex-core = { path = "../cortex-core" }
neo4rs.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
cortex-analyzer = { path = "../cortex-analyzer" }
cortex-core = { path = "../cortex-core" }
cortex-indexer = { path = "../cortex-indexer" }
cortex-parser = { path = "../cortex-parser" }
tempfile.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = ["full"] }
