[package]
name = "cortex-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cortex-core = { path = "../cortex-core" }
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# FalkorDB (RESP via redis crate — avoids falkordb 0.2.1 rustc recursion_limit issue)
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
cortex-a2a = { path = "../cortex-a2a" }
cortex-analyzer = { path = "../cortex-analyzer" }
cortex-core = { path = "../cortex-core" }
cortex-indexer = { path = "../cortex-indexer" }
cortex-parser = { path = "../cortex-parser" }
tempfile.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1", features = ["v4"] }
