[package]
name = "cortex-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cortex-analyzer = { path = "../cortex-analyzer" }
cortex-core = { path = "../cortex-core" }
dirs = "5"
cortex-graph = { path = "../cortex-graph" }
cortex-parser = { path = "../cortex-parser" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
sled.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2 = "0.10"
blake3 = "1.5"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
