[package]
name = "cortex-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
cortex-analyzer = { path = "../cortex-analyzer" }
cortex-core = { path = "../cortex-core" }
cortex-graph = { path = "../cortex-graph" }
cortex-indexer = { path = "../cortex-indexer" }
cortex-parser = { path = "../cortex-parser" }
cortex-vector = { path = "../cortex-vector" }
cortex-watcher = { path = "../cortex-watcher" }
dashmap.workspace = true
lru = "0.16"
rmcp.workspace = true
rusqlite = { version = "0.38", features = ["bundled"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
jsonschema = "0.45"
tempfile = "3.10"
