[package]
name = "cortex-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-bash = "0.25.1"
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java = "0.23"
tree-sitter-javascript.workspace = true
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-php = "0.24"
tree-sitter-python.workspace = true
tree-sitter-ruby = "0.23"
tree-sitter-rust.workspace = true
tree-sitter-swift = "0.7.1"
tree-sitter-typescript.workspace = true

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "indexing_throughput"
harness = false
