[package]
name = "cortex-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Vector storage and embedding providers for CodeCortex"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true

# HTTP client for embedding APIs
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# LanceDB - embedded vector database
lancedb = "0.26"
# Keep Arrow aligned with LanceDB's major to avoid RecordBatch type mismatches.
arrow-array = "57.3"
arrow-schema = "58.0"
futures = "0.3"

[dev-dependencies]
tempfile.workspace = true
