[package]
name = "cortex-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-indexer = { path = "../cortex-indexer" }
dashmap = "6"
parking_lot = "0.12"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
notify.workspace = true
notify-debouncer-mini.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
